--- a/views/register.html
+++ b/views/register.html
@@ -17,9 +17,10 @@ rel="stylesheet" />
                 <a href="/"><img src="images/logo-mercado-liebre.svg" alt="Logo ML"></img></a>
             </div>
             <div class="buscador">
-                <input id="size-search" type="text" name="buscar" placeholder="Buscar productos, marcas">
-                <button id="icon-search"><i  class="fas fa-search"></i></button>
-            </div>
+                <form action="/" method="GET" >
+                    <input id="size-search" type="text" name="buscar" placeholder="Buscar productos, marcas">
+                    <button id="icon-search"><i  class="fas fa-search"></i></button>
+                </form>
         </div>
         <div class="format-heading">
             <p class="format-text"><i class="fas fa-hand-holding-usd icon-margin"></i>Comprá en cuotas y sin tarjeta de crédito</p>
