--- a/views/login.html
+++ b/views/login.html
@@ -17,8 +17,10 @@ rel="stylesheet" />
                 <a href="/"><img src="images/logo-mercado-liebre.svg" alt="Logo ML"></img></a>
             </div>
             <div class="buscador">
-                <input id="size-search" type="text" name="buscar" placeholder="Buscar productos, marcas">
-                <button id="icon-search"><i  class="fas fa-search"></i></button>
+                <form action="/" method="GET" >
+                    <input id="size-search" type="text" name="buscar" placeholder="Buscar productos, marcas">
+                    <button id="icon-search"><i  class="fas fa-search"></i></button>
+                </form>
             </div>
         </div>
         <div class="format-heading">
